--- a/scss/_navbar.scss
+++ b/scss/_navbar.scss
@@ -116,6 +116,9 @@ nav {
           padding: 0 0.25rem;
           margin: 0 0.75rem;
           font-size: 0.75rem;
+          p {
+            padding: 0.5rem 0.5rem 0.5rem 0;
+          }
         }
       }
       .function {
@@ -181,7 +184,7 @@ nav {
                 }
               }
               a:hover {
-                color: rgb(92, 9, 92);
+                color: rgb(92, 9, 92) !important;
               }
             }
           }
